--- a/style.css
+++ b/style.css
@@ -447,7 +447,6 @@ h4 {
   height: 1rem;
   width: 1rem;
   border-radius: 50%;
-  margin-right: 1.75rem;
   cursor: pointer;
   transition: all 0.5s;
 
@@ -461,7 +460,7 @@ h4 {
 
 .dots__dot--active {
   /* background-color: #fff; */
-  background-color: #888;
+  background-color: #888 !important;
   opacity: 1;
 }
 
@@ -673,4 +672,19 @@ h4 {
   color: #bbb;
   font-size: 1.5rem;
   font-weight: 400;
+}
+
+.dots {
+  gap: 1.8rem;
+}
+
+.dot {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: #ccc;
+
+  &--active {
+    background-color: #777;
+  }
 }
