--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@
   --gradient-secondary: linear-gradient(to top left, #ffb003, #ffcb03);
 }
 
+.pad {
+  padding: 0 3rem !important;
+}
 * {
   margin: 0;
   padding: 0;
@@ -116,7 +119,7 @@ img {
 }
 
 /* NAVIGATION */
-.nav {
+.header__nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -164,6 +167,9 @@ img {
   background-color: var(--color-primary);
   color: #222;
 }
+.nav {
+  margin-left: auto;
+}
 
 .nav__link--btn:hover,
 .nav__link--btn:active {
@@ -172,10 +178,36 @@ img {
   color: #333;
 }
 
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+
+.btn-mobile {
+  width: 4.8rem;
+  height: 4.8rem;
+}
+
+.btn-mobile--close {
+  display: none;
+}
+.open .btn-mobile--menu {
+  display: none;
+}
+
+.open .btn-mobile--close {
+  display: block;
+}
+
+.open .nav {
+  transform: translateX(0%);
+}
 /* HEADER */
 .header {
   padding: 0 3rem;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -234,8 +266,10 @@ h4 {
 .features {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 4rem;
-  margin: 0 12rem;
+  gap: 6.4rem;
+  max-width: 120rem;
+  margin: 0 auto;
+  align-items: center;
 }
 
 .features__img {
