--- a/style.css
+++ b/style.css
@@ -69,6 +69,13 @@ body {
   line-height: 1.3;
   font-weight: 500;
 }
+h1,
+h2,
+h3,
+h4,
+h5 {
+  line-height: 1.5;
+}
 
 .btn {
   display: inline-block;
@@ -81,6 +88,7 @@ body {
   border-radius: 10rem;
   cursor: pointer;
   transition: all 0.3s;
+  line-height: 1.2;
 }
 
 .btn:hover {
